style.css
:root {
    --dark-blue: hsl(233, 26%, 24%);
    --lime-green: hsl(136, 65%, 51%);
    --bright-cyan: hsl(192, 70%, 51%);
    --grayish-blue: hsl(233, 8%, 62%);
    --light-grayish-blue: hsl(220, 16%, 96%);
    --very-light-gray: hsl(0, 0%, 98%);
    --white: hsl(0, 0%, 100%);
}
* {
    margin: 0px;
    padding: 0px;
    border: none;
}
html {
    font-family: 'Public Sans', sans-serif;
    line-height: 1.2;
}
body {
    font-size: 18px;
    
}
a {
    text-decoration: none;
}
header {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 10px 0px;
    z-index: 1000;
    position: relative;
    background: white;
}
nav a {
    color: gray;
}
nav a:not(:last-child) {
    padding-right: 10px;
}

nav a:hover {
    color: black;
}

/* text */
p {
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.5;
    color: gray;
}
h1 {
    font-size: 2.93rem;
    font-weight: 300;
}
h2 {
    font-size: 2.5rem;
    font-weight: 300;
}
h4 {
    font-size: 1.4375rem;
    font-weight: 300;
}

/* helper classes */
.card-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    gap: 1rem;
}

.bottom-gutter {
    margin-bottom: 1.875rem;
}
.invite-button {
    width: 165px;
    height: 45px;
    border-radius: 25px;
    background: linear-gradient(to right, var(--lime-green), var(--bright-cyan) );
    color: var(--white);
    font-weight: 700;
}
.grid-flex-right {
    justify-self: right;
}
/* header */

/* intro */
#intro {
    /* background: var(--very-light-gray) url(./images/bg-intro-desktop.svg) no-repeat right -550px top -250px; */
    background: var(--very-light-gray);
    height: 650px;
    display: grid;
    grid-template-columns: 50% 50%;
}
.cta {
    max-width: 440px;
    padding-left: 160px;
    padding-top: 160px;
}
.cta h1 {
    padding-bottom: 1.875rem;
}
.cta p {
    padding-bottom: 1.875rem;
}
.cta-image {
    background: url(./images/bg-intro-desktop.svg)  no-repeat left top -250px;
    height: 650px;
    position: relative;
}
.cta-image img {
    width: 100%;
    position: absolute;
    top: -55px;
}
/* why choose */
#why-choose {
    min-height: 650px;
    background: var(--light-grayish-blue);
    display: grid;
    justify-content: center;
}

/* articles */
#articles {
    min-height: 650px;
    background: var(--very-light-gray);   
    display: grid;
    justify-content: center;
}

.article-card {
    background: var(--white);
    display: grid;
    grid-template-columns: auto;
    gap: 1rem
}
.article-card img {
    width: 100%;
    object-fit: contain;
}
/* footer */
footer {
    background: var(--dark-blue);
    display: grid;
    grid-template-columns: auto auto auto;
    padding: 45px 160px;
}
.bottom-nav {
    display: grid;
    grid-template-columns: auto auto;
    gap: 1rem;
}
.bottom-nav a {
    color: var(--very-light-gray);
}
.footer-end {
    display: grid;
    grid-template-columns: auto;
    justify-content: end;
    gap: 1.5rem;
}
.copyright {
    color: var(--grayish-blue)
}

@media (max-width: 900px) {
    .cta-image img {
        top: 5px;
    }
}
@media (max-width: 800px) {
    #intro {
        background: url(./images/bg-intro-mobile.svg)  no-repeat left top -250px;
        height: auto;
        grid-template-columns: 100% ;
        justify-content: center;
    }
    .cta {
        order: 2;
        padding: 0px;
        margin: auto;
    }
    .cta-image {
        order: 1;
    }
    .cta-image img {
        top: -300px;
    }
}
@media (max-width: 500px) {
    .mobile-hide {
        display: none;
    }
    .article-card {
        width: 80%;
        margin: auto;
    }
    .card {
        width: 80%;
        margin: auto;
        display: grid;
        text-align: center;
    }
    .card img {
        justify-self: center;
    }
    .header {
        width: 80%;
        margin: auto;
        text-align: center;
    }
}

